<resources>
    <string name="app_name">Gringotts</string>
    <string name="txt_activityOnboarding1">O jeito fácil de controlar seu dinheiro.</string>
    <string name="txt_activityOnboarding2">Crie sua conta agora mesmo.</string>
    <string name="txt_botaoCriarConta">Criar conta</string>
    <string name="txt_SouCliente">Já tenho cadastro</string>
    <string name="ok">OK</string>

    <!-- STRINGS TELA LOGIN -->
    <string name="prompt_email">CPF, CNPJ ou E-mail</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="registrar">CRIAR CONTA</string>
    <string name="forgotPassword">ESQUECI MINHA SENHA</string>
    <string name="rememberPassword">Lembrar minha conta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_home">Home</string>
    <string name="txt_extrato">Extrato</string>

    <!-- STRINGS TABLE LAYOUT -->
    <string name="principais">Principais</string>
    <string name="produtosInvestimentos">Produtos</string>
    <string name="servicos">Serviços</string>
    <string name="saldo">Saldo</string>
    <string name="real">R$</string>
    <string name="detalhes_conta">Ver detalhes da conta</string>
    <string name="detalhes_saldo">Ver detalhes do saldo</string>
    <string name="security">Bloqueio</string>
    <string name="notifications">Notificações</string>
    <string name="profile_picture">Meu Perfil</string>
    <string name="txt_vantagens">Vantagens do Gringotts para você</string>
    <string name="hidden_balance">* * * *</string>
    <string name="txt_ajuda">Precisa de ajuda?</string>
    <string name="encontre_as_respostas">Encontre as respostas que precisa ou entre em contato com a gente.</string>
    <string name="vendas_recber">À receber:</string>
    <string name="empty" />
    <string name="txt_ola">Olá,&#xA0;</string>
    <string name="txt_transferencia">TRANSFERÊNCIAS</string>
    <string name="txt_account">Veja um local de saque mais próximo de você agora mesmo.</string>
    <string name="txt_title_account">LOCAIS DE SAQUE EM TODO BRASIL</string>
    <string name="titulo">Titulo</string>
    <string name="texto">Texto</string>
    <string name="click">click</string>

    <!-- STRINGS Filter LAYOUT -->
    <string name="txt_filter">Filtros</string>
    <string name="aplicar_filtros">Aplicar filtros</string>
    <string name="txt_statement">Transação de Extrato</string>
    <string name="txt_entradas">Entradas</string>
    <string name="txt_saidas">Saídas</string>
    <string name="txt_todas">Todas</string>
    <string name="tres_dias">Últimos 3 dias</string>
    <string name="sete_dias">Últimos 7 dias</string>
    <string name="trinta_dias">Últimos 30 dias</string>
    <string name="sessenta_dias">Últimos 60 dias</string>
    <string name="centoevinte_dias">Últimos 120 dias</string>
    <string name="PostosShell">Postos Shell</string>
    <string name="Ofertas">Ofertas</string>
    <string name="Shopping">Shopping</string>
    <string name="LocaisDeSaque">Locais de saque</string>
    <string name="IndiqueGanhe">Indique e Ganhe</string>
    <string name="PagarComQrCode">Pagar com QR Code</string>
    <string name="AplicarDinheiro">Aplicar dinheiro</string>
    <string name="Investimentos">Investimentos</string>
    <string name="Seguros">Seguros</string>
    <string name="AprendaInvestir">Aprenda a investir</string>
    <string name="Transferencias">Transferências</string>
    <string name="Cartoes">Cartões</string>
    <string name="PagarContas">Pagar contas</string>
    <string name="Recargas">Recargas</string>
    <string name="Depositar">Depositar</string>
    <string name="Pix">Pix</string>
    <string name="saldo_gringotts">Saldo: </string>
    <string name="ocultar">Ocultar</string>
    <string name="default_account_statement_value">&#xA0;0,00</string>
    <string name="email_instruction">Insira o valor da transferência</string>
    <string name="transferencias_pix">Clientes Gringotts tem transferências Pix gratuitas!</string>
    <string name="chave_destinario">Escolher a chave do destinatário</string>
    <string name="e_mail">E-mail</string>
    <string name="celular">Celular</string>
    <string name="cpf_ou_cnpj">CPF ou CNPJ</string>
    <string name="chave_aleatoria">Chave aleatória</string>
    <string name="inserir_manualmente">Inserir manualmente</string>
    <string name="agencia_e_conta">Agência e conta</string>
    <string name="gr_tis">Grátis</string>
    <string name="valor_total_da_opera_o">Valor total da operação</string>
    <string name="tarifa">Tarifa</string>
    <string name="valor_da_transfer_ncia">Valor da Transferência</string>
    <string name="confira_os_dados_antes_de_continuar">Confira os dados antes de continuar</string>
    <string name="onBoarding_pix_segurança">Conheça o Pix do Gringotts, segurança e praticidade a qualquer momento.</string>
    <string name="o_pix_simples_e_gratuito_como_o_gringotts_sempre_foi_entenda_como_funciona">O Pix é simples e gratuito como o Gringotts sempre foi. Entenda como funciona:</string>
    <string name="transfer_ncias_por_chaves_gr_tis_e_ilimitadas">Transferências por chaves grátis e ilimitadas.</string>
    <string name="venda_com_qr_code_pix_por_at_1_89_e_receba_na_hora">Venda com QR Code Pix por até 1.89% e receba na hora.</string>
    <string name="continuar">Continuar</string>
    <string name="pague_e_receba_24_horas_por_dia_7_dias_por_semana">Pague e receba 24 horas por dia, 7 dias por semana.</string>
    <string name="insira_o_e_mail_do_destinat_rio">Insira o e-mail do destinatário</string>
    <string name="transferencia_pix_realizada_com_sucesso">Transferência Pix realizada com sucesso!</string>
    <string name="valor_transferencia">Valor transferência</string>
    <string name="para">para</string>
    <string name="o_que_voc_deseja_fazer_agora">O que você deseja fazer agora ?</string>
    <string name="ver_comprovante">Ver comprovante</string>
    <string name="fazer_outra_transferencia">Fazer outra transferência</string>
    <string name="ir_para_o_inicio">Ir para o início</string>
    <string name="compartilhe_suas_chaves_ou_seus_dados_banc_rios_para_receber_transfer_ncias_gr_tis">Compartilhe suas chaves ou seus dados bancários para receber transferências grátis.</string>
    <string name="txt_pix">Pix:</string>
    <string name="confirmar_transferencia">CONFIRMAR TRANSFERÊNCIA</string>
    <string name="cancelar">Cancelar</string>
    <string name="rs">R$ </string>
    <string name="agende_a_transferencia">Agendar transferencia</string>
    <string name="txt_to">Para</string>
    <string name="txt_email">E-mail:</string>
    <string name="txt_institution">Instituição:</string>
    <string name="txt_description">Descrição:</string>
    <string name="txt_when">Quando</string>
    <string name="txt_example_date">21/07/2021</string>
    <string name="txt_symbol">R$</string>
    <string name="mostrar">Mostrar</string>
    <string name="FunctionNotImplemented">Função não implementada</string>
    <string name="insira_a_descri_o_opcional">Insira a descrição (opcional)</string>
    <string name="pix_date_picker_title">Agende a Transfêrencia</string>
    <string name="txt_string_date">17/06/2021</string>
    <string name="txt_string_pix">mymail@pix.com</string>
    <string name="tela_nao_implementada">Tela não implementada</string>
    <string name="txt_statement_title">Transações de Extrato</string>
    <string name="txt_empty_list_img">Sem dados para exibir</string>
    <string name="txt_no_data_message">Sem transações para exibir neste período.</string>
    <string name="connection_error">Verifique sua conexão de internet.</string>
    <string name="transaction_validation_error">Erro desconhecido ao validar a transação !</string>
    <string name="transaction_confirmation_error">Erro desconhecido ao confirmar a transação !</string>
    <string name="invalid_email_error">Insira um e-mail válido.</string>
    <string name="get_balance_error">Erro desconheido ao recuperar o saldo.</string>
    <string name="transfer_value_balance_error">Valor da transferência maior que saldo.</string>
    <string name="minimal_transfer_value_error">Transferência deve ser de pelo menos 0,01.</string>
    <string name="email_not_found_error">e-mail não encontrado.</string>
    <string name="incorrect_password_error">Senha incorreta.</string>
    <string name="invalid_password_error">A senha deve conter pelo menos 6 letras.</string>
    <string name="unknown_error">Erro desconhecido.</string>
    <string name="LembrarDigital">Lembrar Digital</string>
    <string name="Cancelar">Cancelar</string>
    <string name="UtilizeOLeitorDeImpressoesDigitais">Utilize o leitor de impressões digitais do seu dispositivo</string>
    <string name="AtenticaçãoBiométrica">Autenticação biométrica</string>
    <string name="AutenticacaoFalhada">Autenticação falhada!</string>
    <string name="Ok">Ok</string>
    <string name="TelaNaoImplementada">Tela não implementada</string>
    <string name="pagamento">Pagamento</string>
</resources>
