<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayLow">

    <ImageView
        android:id="@+id/imageViewLogoGringotts"
        android:layout_width="340dp"
        android:layout_height="143dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.506"
        app:srcCompat="@drawable/logotipo_png"
        tools:ignore="ContentDescription" />

    <View
        android:id="@+id/view"
        android:layout_width="353dp"
        android:layout_height="372dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/white_rounded_corner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogoGringotts" />

    <TextView
        android:id="@+id/txt_onboarding1"
        android:layout_width="308dp"
        android:layout_height="108dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/capriola"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/txt_activityOnboarding1"
        android:textAlignment="center"
        android:textColor="@color/grayHigh"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/txt_onboarding2"
        android:layout_width="271dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/capriola"
        android:text="@string/txt_activityOnboarding2"
        android:textAlignment="center"
        android:textColor="@color/grayHigh"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@id/txt_onboarding1" />

    <Button
        android:id="@+id/buttonCriarConta"
        android:layout_width="268dp"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/golden_rounded_corner"
        android:text="@string/txt_botaoCriarConta"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/txt_onboarding2" />

    <TextView
        android:id="@+id/textViewJaTenhoCadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_SouCliente"
        android:textColor="@color/gold"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/buttonCriarConta" />

</androidx.constraintlayout.widget.ConstraintLayout>